# Lectures

./: .gitignore  README.md  environment.yml  pyproject.toml
data/llm/: economic_training_corpus.txt
notebooks/finance/: data_ml_2025_06.ipynb
notebooks/nlp/: ICU-Lecture-Details.md  NLP-Basics-2-Transformers.ipynb  nlp-api-production-code.ipynb  transformer-scratch.ipynb
src/: gpt-dummy.py  gpt_dummy.py  gpt_train.py
src/examples/: data_processor.py
src/gpt/: generate_utils.py  gpt_kvcache.py  gpt_layers.py  gpt_v1.py  main.py  multi_head_attention.py  transformer_block.py
src/llm/: llm_inference_runner.py
src/llm/inference/: llm_inference_groqinference.py  llm_inference_lmstudio.py  llm_inference_ollama.py
